# snow_duck

./: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md  Rakefile  docker-compose.yml  snow_duck.gemspec
ext/snow_duck/: Cargo.toml  extconf.rb
ext/snow_duck/benches/: my_benchmark.rs
ext/snow_duck/src/: conversions.rs  lib.rs
lib/: snow_duck.rb
lib/snow_duck/: version.rb
lib/snow_duck/data/: database.rb
lib/snow_duck/ddl/: database.rb  embeddable_data.rb  postgres_table.rb  snowflake_table.rb  table.rb  view.rb
lib/snow_duck/format/: formatter.rb  mermaid_formatter.rb  string_formatter.rb
lib/snow_duck/graph/: dag.rb  vertex.rb
lib/snow_duck/utils/: data_initialisation.rb  logger.rb
