[package]
name = "snow_duck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.5.4"
once_cell = "1.18.0"
chrono = "0.4.26"
duckdb = { version = "=1.0.0", features = ["bundled"] }
libduckdb-sys = { version = "=1.0.0" }
