[package]
name = "snow_duck"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
snow_duck = { path = "." }
criterion = { version = "0.5", features = ["html_reports"] }
magnus = { version = "0.7.1", features = ["embed"] }
rand = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7.1"
once_cell = "1.18.0"
chrono = "0.4.26"
duckdb = { git = "https://github.com/duckdb/duckdb-rs.git", rev = "6ffcc70b4f1f67e19f3789b206cc22f4b8811468", features = ["bundled"]  }
